--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,8 +1,12 @@
-include /opt/local/etc/nginx/fastcgi_params;
-
+access_log  /opt/local/var/log/nginx/fwork.loc-access_log;
+error_log  /opt/local/var/log/nginx/fwork.loc-error_log notice;
+listen       80;
+server_name  fwork.loc www.fwork.loc;
 root /Users/tarakanov/PhpstormProjects/php-fwork/web/;
 
-location /qwe/ {
+
+location / {
+        include /opt/local/etc/nginx/fastcgi_params;
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_param SCRIPT_FILENAME /Users/tarakanov/PhpstormProjects/php-fwork/web/index.php;
         fastcgi_param PATH_INFO $fastcgi_script_name;
