--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "doctrine/dbal": "2.3.2",
-        "monolog/monolog": "1.3.*"
+        "monolog/monolog": "1.3.*",
+        "swiftmailer/swiftmailer": "4.3.*"
     },
 
     "require-dev": {
